verification/output/openjdk_21/invalid/MalformedNumber.txt
/data/projects/rajac/verification/sources_invalid/lexer/MalformedNumber.java:3: error: ';' expected
        double d = 1.2.3;
                      ^
1 error
